Changelog
=========

2.1.1 - Unreleased
------------------

2.1.0 - 2011-01-03
------------------

- Depend on ``Products.CMFPlone`` instead of ``Plone``.
  [elro]

- Use plone.uuid to look up content UUIDs.
  [toutpt, davisagli]

- Protect content rules management views using the
  "Content rules: Manage rules" permission, instead of the generic
  "Manage portal".
  [davisagli]

- Do not force to send mails in same transaction if mail queuing is on.
  [thomasdesvenain]

2.0.6 - 2011-01-03
------------------

- Protect content rules management views using the
  "Content rules: Manage rules" permission, instead of the generic
  "Manage portal".
  [davisagli]

- Do not force to send mails in same transaction if mail queuing is on.
  [thomasdesvenain]

2.0.5 - 2010-11-06
------------------

- Added TALES expression condition. This closes
  http://dev.plone.org/plone/ticket/9939.
  [thomasdesvenain]

2.0.4 - 2010-10-27
------------------

- Added missing ``</thead>`` tag.
  [swampmonkey]

- Fixed typo on logger message field description.
  [tdesvenain]

2.0.3 - 2010-09-28
------------------

- Internationalize event trigger types.
  [tdesvenain]

- Added user login variable '&u' to use in logger action message template.
  [tdesvenain]

2.0.2 - 2010-09-20
------------------

- Internationalize some values on management pages.
  [tdesvenain]

2.0.1 - 2010-09-09
------------------

- Raises an ImportError in generic setup import if the value for the "event"
  attribute in contentrules.xml rule element can't be imported.
  [tdesvenain]

- Fix duplicate rule filter crashed at site root level in Acquisition Wrapper
  case. This closes http://dev.plone.org/plone/ticket/10597.
  [tdesvenain]

- Mail action doesn't add an error log when recipient list is empty,
  it just doesn't send the mail.
  [tdesvenain]

- Fix for Chameleon compatibility.
  [vangheem]

2.0 - 2010-07-18
----------------

- Update license to GPL version 2 only.
  [hannosch]

- Code cleanup and some PEP8.