@@ -167,5 +167,15 @@
         name="manage-contentrules.kss"
         file="contentrules.kss"
         />
+    <!-- Render the browser title -->
+
+    <browser:viewlet
+        name="plone.app.contentrules.kssstylesheet"
+        for="*"
+        view=".interfaces.IContentRulesControlPanel"
+        manager="plone.app.layout.viewlets.interfaces.IHtmlHead"
+        class=".controlpanel.KssStylesheetLink"
+        permission="plone.app.contentrules.ManageContentRules"
+    />
 
 </configure>
