@@ -4,6 +4,11 @@ Changelog
 2.1.1 - Unreleased
 ------------------
 
+- Fix : dynamic behavior is fixed on rules controlpanel,
+  including rules list filter.
+  Refs https://dev.plone.org/plone/ticket/10831.
+  [thomasdesvenain]
+
 2.1.0 - 2011-01-03
 ------------------
 
